# event-classification-pytorch

./: init.sh  pyproject.toml
classification/gcp/: storage.py
classification/scripts/: 00_extract_automatic.py  00_extract_manual.py  01_get_labels.py  02_create_training_data_set.py  03_training_picker.py  03_training_pytorch.py  create-classification-dataset.py  create_classification_dataset.py  dataset.py  event_extraction_2.py  extract_data.py  gcp_storage.py  model.py  plotcm.py  spectrogram.py  spectrogram_dataset.py  test_classifier.py  test_classifier_1d.py  train_classifier.py
classification/scripts/00-data-extraction/: 00_prepare_project.py
classification/scripts/00_download_events/: download_catalog_file_from_azure.py  download_data_from_api.py  seismic_events.csv
classification/scripts/01-reprocessed-data/: 01_relocate_events.py
classification/scripts/02-create-data-set/: 02_create_training_images.py  create-classification-dataset.py
classification/scripts/muli-channel-classifier/: 00_create_event_catalog.py  01_train.py  dataset.py  settings.py  spectrograms.py
event-classification-pytorch/: cloudbuild.yaml
event-classification-pytorch/classification/gcp/: storage.py
event-classification-pytorch/classification/scripts/: create-classification-dataset.py  create-picking_dataset.py  dataset.py  learning_rate_optimizer.py  model.py  settings.toml  test_learning_rate_optim.py  train_picker.py
gcp/: request_event.py  storage.py
scripts/: 01_get_labels.py  02_create_training_data_set.py  event_extraction_2.py  extract_data.py  get_labels.py
(+2 files in other folders)
