[tool.poetry]
name = "event-classification-pytorch"
version = "0.1.0"
description = ""
authors = ["jpmercier <jpmercier01@gmail.com>"]

[tool.poetry.dependencies]
# pip install torch==1.8.1+cu111 torchvision==0.9.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html
python = ">=3.8,<3.10"
# uquake = "^0.5.7"
#useis = "^0.2.6"
useis = {path = '../uquake-platform'}
tqdm = "^4.59.0"
kfp = "^1.4.0"
apache-airflow = "^2.0.1"
ipdb = "^0.13.7"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
